--- a/index.html
+++ b/index.html
@@ -2,40 +2,60 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="favicon" href="/texture/uk.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="favicon" href="/video/uk.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Klaris AI</title>
     <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
             background: rgb(2,0,36);
             background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(153,7,226,1) 50%, rgba(11,112,198,1) 100%);
             color: #333;
             display: flex;
             flex-direction: column;
             align-items: center;
+            min-height: 100vh;
+            padding: 10px;
+            position: relative;
+            overflow-x: hidden;
         }
 
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 2.5em;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        #video-idle, #video-talking {
-            position: fixed;
-            top: 0;
-            left: 0;
+        .header-container {
             width: 100%;
-            height: 100%;
-            display: block;
-            object-fit: cover;
-            z-index: -1; /* Ensure the video is behind other content */
+            max-width: 500px;
+            align-self: center;
+            backdrop-filter: blur(8px);
+            background-color: rgba(255, 255, 255, 0.5);
+            padding: 1rem;
+            border-radius: 0.5rem;
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .header-logo {
+            width: 34px;
+            height: 34px;
+            margin-right: 1rem;
+            border-radius: 9999px;
+        }
+
+        .header-text h1 {
+            font-weight: 900;
+            font-size: 1.5rem; /* Increased for better visibility */
+            margin: 0;
+            color: #2c3e50;
+        }
+
+        .header-text p {
+            margin: 0;
+            font-size: 1.1rem; /* Increased for better visibility */
         }
 
         #statusMessage {
@@ -46,41 +66,148 @@
             font-size: 1.1em;
         }
 
-        #recordButton {
-            width: 70px;
-            height: 70px;
-            border-radius: 50%;
-            background-color: #3498db;
-            border: none;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        .chat-container {
+            position: fixed;
+            top: 120px;
+            right: 20px; /* Tetap di kanan layar */
+            bottom: 100px;
             z-index: 10;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
+            padding: 1rem;
+            pointer-events: auto;
+            background-color: rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(8px);
+            border-radius: 0.5rem;
+            width: 350px; /* Ukuran tetap untuk desktop */
+            max-height: calc(100vh - 220px);
+            overflow: hidden;
+        }
+
+        .chat-messages {
+            flex-grow: 1;
+            overflow-y: auto;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+
+        .chat-messages::-webkit-scrollbar {
+            display: none;
+        }
+
+        #inputContainer {
+            display: flex;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        #userInput {
+            flex: 1;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
+            font-size: 16px;
+        }
+
+        #sendButton {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 12px 15px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        #recordButton {
             position: fixed;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
+            width: 80px; /* Increased size for mobile view */
+            height: 80px; /* Increased size for mobile view */
+            border-radius: 50%;
+            background-color: #3498db;
+            border: none;
+            color: white;
+            cursor: pointer;
+            z-index: 20;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        #recordButton:hover {
-            background-color: #2980b9;
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+        #video-idle, #video-talking {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            object-fit: cover;
+            z-index: -1;
         }
 
-        #recordButton:active {
-            transform: translateX(-50%) scale(0.95);
+        .message {
+            padding: 0.75rem;
+            border-radius: 0.375rem;
+            margin-bottom: 0.5rem;
+            word-wrap: break-word;
+            max-width: 100%;
         }
 
-        #recordButton.recording {
-            background-color: #e74c3c;
-            animation: pulse 1.5s infinite;
+        .user-message {
+            background-color: #BFDBFE;
+            align-self: flex-end;
         }
 
+        .gemini-message {
+            background-color: #E5E7EB;
+            align-self: flex-start;
+        }
+
+        @media (max-width: 600px) {
+            .header-container {
+                margin-left: 0;
+                padding: 0.5rem;
+            }
+
+            .header-text h1 {
+                font-size: 1.2rem; /* Adjusted for smaller screens */
+            }
+
+            .header-text p {
+                font-size: 1rem; /* Adjusted for smaller screens */
+            }
+
+            #recordButton {
+                width: 80px; /* Maintain increased size for mobile view */
+                height: 80px; /* Maintain increased size for mobile view */
+            }
+
+            #recordButton svg {
+                width: 40px; /* Increased size for SVG icon */
+                height: 40px; /* Increased size for SVG icon */
+            }
+
+            .chat-container {
+                display: none; /* Hide chat box on mobile view */
+            }
+        } 
+
+        @media (max-width: 400px) {
+            #userInput {
+                font-size: 14px; /* Smaller font for very small screens */
+            }
+
+            #sendButton {
+                padding: 10px 12px; /* Adjusted padding for smaller screens */
+            }
+        }
+
+        /* Existing keyframe animations remain the same */
         @keyframes pulse {
             0% {
                 transform: translateX(-50%) scale(1);
@@ -95,124 +222,14 @@
                 box-shadow: 0 0 0 0 rgba(231, 76, 60, 0);
             }
         }
-
-        #audioResponse {
-            opacity: 0;
-            position: absolute;
-            left: -9999px;
-        }
-
-        /* Chat container */
-        .chat-container {
-            position: fixed;
-            top: 80px;
-            right: 0;
-            bottom: 80px;
-            z-index: 10;
-            display: flex;
-            flex-direction: column;
-            padding: 1rem;
-            pointer-events: auto;
-            background-color: rgba(255, 255, 255, 0.4);
-            backdrop-filter: blur(8px);
-            border-radius: 0.5rem;
-            width: 25%;
-            max-height: calc(100% - 160px);
-        }
-
-        .chat-title {
-            font-weight: 900;
-            font-size: 1.25rem;
-            margin-bottom: 1rem;
-        }
-
-        .chat-messages {
-            flex-grow: 1;
-            overflow-y: auto;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-        }
-
-        .chat-messages::-webkit-scrollbar {
-            display: none;
-        }
-
-        .message {
-            padding: 0.5rem;
-            border-radius: 0.375rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .user-message {
-            background-color: #BFDBFE;
-        }
-
-        .gemini-message {
-            background-color: #E5E7EB;
-        }
-
-        #inputContainer {
-            display: flex;
-            width: 100%;
-            margin-top: 10px;
-        }
-
-        #userInput {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-
-        #sendButton {
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px;
-            cursor: pointer;
-        }
-
-        #sendButton:hover {
-            background-color: #2980b9;
-        }
-
-        .header-container {
-            align-self: flex-start;
-            backdrop-filter: blur(8px);
-            background-color: rgba(255, 255, 255, 0.5);
-            padding: 1rem;
-            border-radius: 0.5rem;
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .header-logo {
-            width: 48px;
-            height: 48px;
-            margin-right: 1rem;
-            border-radius: 9999px;
-        }
-
-        .header-text h1 {
-            font-weight: 900;
-            font-size: 1.25rem;
-            margin: 0;
-        }
-
-        .header-text p {
-            margin: 0;
-        }
     </style>
 </head>
 <body>
-    <div class="header-container" style="margin-left: -530px;">
-        <img src="/texture/klabat.png" alt="Small logo" class="header-logo" style="width: 64px; height: 64px;" />
+    <div class="header-container">
+        <img src="/video/klabat.png" alt="Small logo" class="header-logo" />
         <div class="header-text">
-            <h1 style="font-size: 1.5rem;">Your Personal AI Campus Assistant</h1>
-            <p style="font-size: 1.1rem;">Unklab for lyfe!</p>
+            <h1>Your Personal AI Campus Assistant</h1>
+            <p>Unklab for lyfe!</p>
         </div>
     </div>
     <div id="statusMessage"></div>
@@ -319,6 +336,20 @@
             }
         };
 
+        // Add keyboard event listener for chat toggle
+        document.addEventListener('keydown', function(event) {
+            if (event.key.toLowerCase() === 'c') {
+                const chatContainer = document.querySelector('.chat-container');
+                chatContainer.style.display = chatContainer.style.display === 'none' || chatContainer.style.display === '' ? 'flex' : 'none';
+            } else if (event.key.toLowerCase() === 'r') {
+                if (!isRecording) {
+                    recognition.start();
+                } else {
+                    recognition.stop();
+                }
+            }
+        });
+
         // Improved Gemini processing with better error handling
         async function processWithGemini(text) {
             try {
@@ -362,6 +393,7 @@
                                 videoTalking.style.display = 'none';
                                 videoIdle.style.display = 'block';
                                 statusMessage.textContent = 'Tanya Klaris lagi...';
+                                statusMessage.style.marginTop = '10px';
                             };
                         } catch (audioError) {
                             console.error('Audio playback error:', audioError);
@@ -381,6 +413,7 @@
         function resetUI() {
             recordButton.classList.remove('recording');
             statusMessage.textContent = 'Tekan tombol untuk mulai bertanya';
+            statusMessage.style.marginTop = '10px'; // Adjust the margin to move the text up slightly
             videoTalking.style.display = 'none';
             videoIdle.style.display = 'block';
         }
