change status message

--- a/index.html
+++ b/index.html
@@ -226,7 +226,6 @@
 </head>
 <body>
     <div class="header-container">
-        <img src="/video/klabat.png" alt="Small logo" class="header-logo" />
         <div class="header-text">
             <h1>Your Personal AI Campus Assistant</h1>
             <p>Unklab for lyfe!</p>
@@ -412,7 +411,7 @@
 
         function resetUI() {
             recordButton.classList.remove('recording');
-            statusMessage.textContent = 'Tekan tombol untuk mulai bertanya';
+            statusMessage.textContent = 'Tunggu Klaris Menjawab';
             statusMessage.style.marginTop = '10px'; // Adjust the margin to move the text up slightly
             videoTalking.style.display = 'none';
             videoIdle.style.display = 'block';
