--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             if (event.key.toLowerCase() === 'c') {
                 const chatContainer = document.querySelector('.chat-container');
                 chatContainer.style.display = chatContainer.style.display === 'none' || chatContainer.style.display === '' ? 'flex' : 'none';
-            } else if (event.key.toLowerCase() === 'r') {
+            } else if (event.key.toLowerCase() === '') {
                 if (!isRecording) {
                     recognition.start();
                 } else {
